--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <meta property="og:image"		content="https://image.istarbucks.co.kr/common/img/kakaotalk.png">
     <meta property="og:description" content="Starbucks">
 
-    <title id="titleJoin">Starbucks Korea</title><script type="text/javascript" src="/common/js/esabsbuxkr.js?single"></script> <!-- 220117 수정 -->
-    <link rel="shortcut icon" href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828" type="image/ico"> <!-- 20200827 파비콘 교체 및 CDN 변수처리 -->
+    <title id="titleJoin">Starbucks Korea</title><script type="text/javascript" src="/common/js/esabsbuxkr.js?single"></script> 
+    <link rel="shortcut icon" href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828" type="image/ico"> 
     <link href="https://www.starbucks.co.kr/common/css/reset.css" rel="stylesheet">
     <link href="https://www.starbucks.co.kr/common/css/style.css?v=221220" rel="stylesheet">
     <link href="https://www.starbucks.co.kr/common/css/jquery.bxslider.css" rel="stylesheet">
@@ -21,10 +21,11 @@
     <link href="https://www.starbucks.co.kr/common/css/jquery.scrollbar.css" rel="stylesheet">
     <link href="https://www.starbucks.co.kr/common/css/jquery-ui.css" rel="stylesheet">
     <link href="https://www.starbucks.co.kr/common/css/ezmark.css" rel="stylesheet">
-    <link href="https://www.starbucks.co.kr/common/css/style_dt.css?v=20191211" rel="stylesheet"> <!-- 20191211 수정 -->
-    <link rel="shortcut icon" href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828" type="image/ico"> <!-- 20200827 파비콘 교체 및 CDN 변수처리 -->
+    <link href="https://www.starbucks.co.kr/common/css/style_dt.css?v=20191211" rel="stylesheet"> 
+    <link rel="shortcut icon" href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828" type="image/ico"> 
     <link href="https://www.starbucks.co.kr/common/css/style_main.css?v=221221" rel="stylesheet" />
-    <link href="https://www.starbucks.co.kr/common/css/style_main_newProm.css?v=210219" rel="stylesheet" /> <!-- 20201023 수정 -->
+    <link href="https://www.starbucks.co.kr/common/css/style_main_newProm.css?v=210219" rel="stylesheet" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     
   </head>
   <body>
