--- a/publish/starbucks.html
+++ b/publish/starbucks.html
@@ -3,6 +3,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+	
+
+
+
+
+
+
+
+
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
@@ -678,8 +687,7 @@ var eFrequencyPlannerYn = 'N';
 			<!-- 플로팅 뱃지 안내 -->
 			<div class="layer_floating">
 				
-					<div class="badge_cont1"
-						 >
+					<div class="badge_cont1">
 						<a href="https://www.starbucks.co.kr/plcc/promotionView.do?eventCode=STH02"  onclick="GaFloating('PLCC 스타벅스 현대카드 1월 프로모션')">
 							<img src="https://image.istarbucks.co.kr/upload/banner/floatingbnr/RHDZWh_20230103083817498.png" alt="PLCC 스타벅스 현대카드 1월 프로모션" class="pc-badge">
 							<img src="https://image.istarbucks.co.kr/upload/banner/floatingbnr/RHDZWh_20230103083824455.png" alt="PLCC 스타벅스 현대카드 1월 프로모션" class="mobile-badge">
